# job_tracker_analysis

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  init_create_tech_stack.py  main.py  pyproject.toml  standardized_tech_stack.json
dags/: bronze_to_silver.py  hn_extraction_dag.py
scripts/: bronze_to_silver.py  dashboard.py  extract_bronze.py  jobs_sample.json  silver_to_gold.py  standardized_tech_stack.json  trial.py
scripts/extraction_test/: .part-00000-76745359-de0d-4d63-be9b-20a19b4dd536-c000.snappy.parquet.crc  part-00000-76745359-de0d-4d63-be9b-20a19b4dd536-c000.snappy.parquet
storage/data/.rustfs.sys/: format.json
storage/data/.rustfs.sys/config/tier-config.json/92390b80-f80f-4270-82a4-4bdfea6405ea/: part.1
storage/data/.rustfs.sys/datausage/: 643a93e5-27d3-478f-ad55-77a2b2931f8b.json
storage/data/.rustfs.sys/datausage/state/: 643a93e5-27d3-478f-ad55-77a2b2931f8b.json
storage/data/.rustfs.sys/pool.bin/2e890f03-f241-4c70-b65c-0c59acf3649b/: part.1
storage/postgres/: postmaster.pid
storage/postgres/base/1/: 2619  2696  2840  2841
storage/postgres/base/5/: 1247  1249  1259  1259_fsm  16384  16390  16391  16393  16394  16395  16395_vm  16402  16404  16405  16406  16412  16413  16415  16416  16417  16417_fsm  16422  16423  16425  16426  16427  16428  16433  16434  16436  16437  16437_fsm  16437_vm  16442  16443  16445  16446  16447  16448  16449  (+189 more)
storage/postgres/global/: 1260  pg_control  pg_internal.init
storage/postgres/pg_xact/: 0000
(+20 files in other folders)
